feat(js,zk)